--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 											<ul>
 												<li class="current_page_item"><a href="index.html">Home</a></li>
 												<li>
-													<a href="#">Dropdown</a>
+												<!--- 	<a href="#">Dropdown</a>
 													<ul>
 														<li><a href="#">Lorem ipsum dolor</a></li>
 														<li><a href="#">Magna phasellus</a></li>
@@ -45,7 +45,7 @@
 														</li>
 														<li><a href="#">Veroeros feugiat</a></li>
 													</ul>
-												</li>
+												</li> -->
 												<li><a href="left-sidebar.html">Left Sidebar</a></li>
 												<li><a href="right-sidebar.html">Right Sidebar</a></li>
 												<li><a href="no-sidebar.html">No Sidebar</a></li>
