--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 												<li><a href="left-sidebar.html">Left Sidebar</a></li>
 												<li><a href="right-sidebar.html">Right Sidebar</a></li>
 												<li><a href="no-sidebar.html">No Sidebar</a></li>
+												<li><a href="pdfs/CV_website.pdf">CV</a></li>
 											</ul>
 										</nav>
 
