--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
 														<li><a href="#">Veroeros feugiat</a></li>
 													</ul>
 												</li> -->
-												<li><a href="left-sidebar.html">Left Sidebar</a></li>
-												<li><a href="right-sidebar.html">Right Sidebar</a></li>
+												<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
+												<!-- <li><a href="right-sidebar.html">Right Sidebar</a></li> --> 
 												<li><a href="no-sidebar.html">No Sidebar</a></li>
+												<li><a href="Publications.html">Publications</a></li>
 												<li><a href="pdfs/CV_website.pdf">CV</a></li>
 											</ul>
 										</nav>
