--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -28,9 +28,9 @@
 									<!-- Nav -->
 										<nav id="nav">
 											<ul>
-												<li><a href="index.html">Home</a></li>
+												<li class="current_page_item"><a href="index.html">Home</a></li>
 												<li>
-													<a href="#">Dropdown</a>
+												<!--- 	<a href="#">Dropdown</a>
 													<ul>
 														<li><a href="#">Lorem ipsum dolor</a></li>
 														<li><a href="#">Magna phasellus</a></li>
@@ -45,10 +45,12 @@
 														</li>
 														<li><a href="#">Veroeros feugiat</a></li>
 													</ul>
-												</li>
-												<li><a href="left-sidebar.html">Left Sidebar</a></li>
-												<li><a href="right-sidebar.html">Right Sidebar</a></li>
-												<li class="current_page_item"><a href="no-sidebar.html">No Sidebar</a></li>
+												</li> -->
+												<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
+												<!-- <li><a href="right-sidebar.html">Right Sidebar</a></li> --> 
+												<li><a href="no-sidebar.html">No Sidebar</a></li>
+												<li><a href="Publications.html">Publications</a></li>
+												<li><a href="pdfs/CV_website.pdf">CV</a></li>
 											</ul>
 										</nav>
 
