--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -28,7 +28,7 @@
 									<!-- Nav -->
 										<nav id="nav">
 											<ul>
-												<li class="current_page_item"><a href="index.html">Home</a></li>
+												<li><a href="index.html">Home</a></li>
 												<li>
 												<!--- 	<a href="#">Dropdown</a>
 													<ul>
@@ -48,7 +48,7 @@
 												</li> -->
 												<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
 												<!-- <li><a href="right-sidebar.html">Right Sidebar</a></li> --> 
-												<li><a href="no-sidebar.html">No Sidebar</a></li>
+												<li class="current_page_item"><a href="no-sidebar.html">No Sidebar</a></li>
 												<li><a href="Publications.html">Publications</a></li>
 												<li><a href="pdfs/CV_website.pdf">CV</a></li>
 											</ul>
