--- a/Publications.html
+++ b/Publications.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - ZeroFour by HTML5 UP</title>
+		<title>Publications</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -69,10 +69,10 @@
 									<!-- Content -->
 
 										<article>
-											<header class="major">
+											<!-- <header class="major">
 												<h2>No Sidebar</h2>
 												<p>Sidebars are not welcome here</p>
-											</header>
+											</header> -->
 
 											<p>
 										        	Charpentier, C. P. & Wright, A. M. (2022). Revticulate: An R framework for interaction with RevBayes. Methods in Ecology and Evolution, 13, 1177– 1184. https://doi.org/10.1111/2041-210X.13852	
