--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
 												</li> -->
 												<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
 												<!-- <li><a href="right-sidebar.html">Right Sidebar</a></li> --> 
-												<li><a href="no-sidebar.html">No Sidebar</a></li>
+											        <li><a href="Research.html">Research</a></li>
 												<li><a href="Publications.html">Publications</a></li>
+												<li><a href="Software.html">Software</a></li>
 												<li><a href="pdfs/CV_website.pdf">CV</a></li>
 											</ul>
 										</nav>
