--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						<div class="inner">
 
 							<!-- Feature 2 -->
-								<section class="container box feature2">
+								<!-- <section class="container box feature2">
 									<div class="row">
 										<div class="col-6 col-12-medium">
 											<section>
@@ -159,7 +159,7 @@
 											</section>
 										</div>
 									</div>
-								</section>
+								</section> -->
 
 							</div>
 					</div>
