--- a/index.html
+++ b/index.html
@@ -122,11 +122,12 @@
 
 						</div>
 					</div>
-					<div class="wrapper style2">
+					<!--
+					 <div class="wrapper style2">
 						<div class="inner">
 
-							<!-- Feature 2 -->
-								<!-- <section class="container box feature2">
+							
+								 <section class="container box feature2">
 									<div class="row">
 										<div class="col-6 col-12-medium">
 											<section>
@@ -159,10 +160,10 @@
 											</section>
 										</div>
 									</div>
-								</section> -->
+								</section> 
 
 							</div>
-					</div>
+					</div> -->
 					<div class="wrapper style3">
 						<div class="inner">
 							<div class="container">
