--- a/index.html
+++ b/index.html
@@ -72,10 +72,8 @@
 
 			<!-- Main Wrapper -->
 				<div id="main-wrapper">
-					<div class="wrapper style1">
+					<!-- <div class="wrapper style1">
 						<div class="inner">
-
-							<!-- Feature 1 -->
 								<section class="container box feature1">
 									<div class="row">
 										<div class="col-12">
@@ -118,10 +116,10 @@
 											amet pulvinar. Nam nec turpis.</p>
 										</div>
 									</div>
-								</section>
+								</section> 
 
 						</div>
-					</div>
+					</div> -->
 					<!--
 					 <div class="wrapper style2">
 						<div class="inner">
