--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 				<div id="header-wrapper">
 					<div class="container">
 
+						<!-- Banner -->
+							<div id="banner">
+								<h2>Caleb Charpentier</h2>
+							</div>
+						
 						<!-- Header -->
 							<header id="header">
 								<div class="inner">
@@ -29,25 +34,6 @@
 										<nav id="nav">
 											<ul>
 												<li class="current_page_item"><a href="index.html">Home</a></li>
-												<li>
-												<!--- 	<a href="#">Dropdown</a>
-													<ul>
-														<li><a href="#">Lorem ipsum dolor</a></li>
-														<li><a href="#">Magna phasellus</a></li>
-														<li>
-															<a href="#">Phasellus consequat</a>
-															<ul>
-																<li><a href="#">Lorem ipsum dolor</a></li>
-																<li><a href="#">Phasellus consequat</a></li>
-																<li><a href="#">Magna phasellus</a></li>
-																<li><a href="#">Etiam dolore nisl</a></li>
-															</ul>
-														</li>
-														<li><a href="#">Veroeros feugiat</a></li>
-													</ul>
-												</li> -->
-												<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
-												<!-- <li><a href="right-sidebar.html">Right Sidebar</a></li> --> 
 											        <li><a href="Research.html">Research</a></li>
 												<li><a href="Publications.html">Publications</a></li>
 												<li><a href="Software.html">Software</a></li>
@@ -57,111 +43,11 @@
 
 								</div>
 							</header>
-
-						<!-- Banner -->
-							<div id="banner">
-								<h2>Caleb Charpentier
-								<!-- <br />
-								built on HTML5 and CSS3 by <a href="http://html5up.net">HTML5 UP</a> --> </h2>
-								<!-- <p>Does this statement make you want to click the big shiny button?</p>
-								<a href="#" class="button large icon solid fa-check-circle">Yes it does</a> -->
-							</div>
-
 					</div>
 				</div>
 
 			<!-- Main Wrapper -->
 				<div id="main-wrapper">
-					<!-- <div class="wrapper style1">
-						<div class="inner">
-								<section class="container box feature1">
-									<div class="row">
-										<div class="col-12">
-											<header class="first major">
-												<h2>This is an important heading</h2>
-												<p>And this is where we talk about why we’re <strong>pretty awesome</strong> ...</p>
-											</header>
-										</div>
-										<div class="col-4 col-12-medium">
-											<section>
-												<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-												<header class="second icon solid fa-user">
-													<h3>Here's a Heading</h3>
-													<p>And a subtitle</p>
-												</header>
-											</section>
-										</div>
-										<div class="col-4 col-12-medium">
-											<section>
-												<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-												<header class="second icon solid fa-cog">
-													<h3>Also a Heading</h3>
-													<p>And another subtitle</p>
-												</header>
-											</section>
-										</div>
-										<div class="col-4 col-12-medium">
-											<section>
-												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-												<header class="second icon solid fa-chart-bar">
-													<h3>Another Heading</h3>
-													<p>And yes, a subtitle</p>
-												</header>
-											</section>
-										</div>
-										<div class="col-12">
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper
-											bibendum ipsum, et tristique augue fringilla eu. Vivamus id risus vel dolor auctor euismod
-											quis eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus mattis lectus sit
-											amet pulvinar. Nam nec turpis.</p>
-										</div>
-									</div>
-								</section> 
-
-						</div>
-					</div> -->
-					<!--
-					 <div class="wrapper style2">
-						<div class="inner">
-
-							
-								 <section class="container box feature2">
-									<div class="row">
-										<div class="col-6 col-12-medium">
-											<section>
-												<header class="major">
-													<h2>And this is a subheading</h2>
-													<p>It’s important but clearly not *that* important</p>
-												</header>
-												<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-												Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-												Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-												consequat etiam.</p>
-												<footer>
-													<a href="#" class="button medium icon solid fa-arrow-circle-right">Let's do this</a>
-												</footer>
-											</section>
-										</div>
-										<div class="col-6 col-12-medium">
-											<section>
-												<header class="major">
-													<h2>This is also a subheading</h2>
-													<p>And is as unimportant as the other one</p>
-												</header>
-												<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-												Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-												Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-												consequat etiam.</p>
-												<footer>
-													<a href="#" class="button medium alt icon solid fa-info-circle">Wait, what?</a>
-												</footer>
-											</section>
-										</div>
-									</div>
-								</section> 
-
-							</div>
-					</div> -->
 					<div class="wrapper style3">
 						<div class="inner">
 							<div class="container">
