--- a/Publications.html
+++ b/Publications.html
@@ -33,6 +33,7 @@
 												<li class="current_page_item"><a href="Publications.html">Publications</a></li>
 												<li><a href="Software.html">Software</a></li>
 												<li><a href="pdfs/CV_website.pdf">CV</a></li>
+												<li><a href="pdfs/Contact.html">Contact</a></li>
 											</ul>
 										</nav>
 								</div>
