--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 												<li><a href="Publications.html">Publications</a></li>
 												<li><a href="Software.html">Software</a></li>
 												<li><a href="pdfs/CV_website.pdf">CV</a></li>
-												<li><a href="pdfs/Contact.html">Contact</a></li>
+												<li><a href="Contact.html">Contact</a></li>
 											</ul>
 										</nav>
 
