--- a/Publications.html
+++ b/Publications.html
@@ -22,8 +22,6 @@
 							<header id="header">
 								<div class="inner">
 
-									<!-- Logo -->
-										<h1><a href="index.html" id="logo">ZeroFour</a></h1>
 
 									<!-- Nav -->
 										<nav id="nav">
@@ -33,7 +31,7 @@
 												<li class="current_page_item"><a href="Publications.html">Publications</a></li>
 												<li><a href="Software.html">Software</a></li>
 												<li><a href="pdfs/CV_website.pdf">CV</a></li>
-												<li><a href="pdfs/Contact.html">Contact</a></li>
+												<li><a href="Contact.html">Contact</a></li>
 											</ul>
 										</nav>
 								</div>
