--- a/Contact.html
+++ b/Contact.html
@@ -22,11 +22,11 @@
 										<nav id="nav">
 											<ul>
 												<li><a href="index.html">Home</a></li>
-											  <li><a href="Research.html">Research</a></li>
+											        <li><a href="Research.html">Research</a></li>
 												<li><a href="Publications.html">Publications</a></li>
 												<li><a href="Software.html">Software</a></li>
 												<li><a href="pdfs/CV_website.pdf">CV</a></li>
-                        									<li class="current_page_item"><a href="pdfs/Contact.html">Contact</a></li>
+                        									<li class="current_page_item"><a href="Contact.html">Contact</a></li>
 											</ul>
 										</nav>
 								</div>
