--- a/Research.html
+++ b/Research.html
@@ -14,14 +14,18 @@
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header Wrapper -->
+			<!-- Header -->
 				<div id="header-wrapper">
 					<div class="container">
 
+						<!-- Banner -->
+							<div id="banner">
+								<h2>Caleb Charpentier</h2>
+							</div>
+						
 						<!-- Header -->
 							<header id="header">
 								<div class="inner">
-
 									<!-- Nav -->
 										<nav id="nav">
 											<ul>
@@ -36,7 +40,6 @@
 
 								</div>
 							</header>
-
 					</div>
 				</div>
 
