--- a/Publications.html
+++ b/Publications.html
@@ -14,14 +14,18 @@
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header Wrapper -->
+			<!-- Header -->
 				<div id="header-wrapper">
 					<div class="container">
 
+						<!-- Banner -->
+							<div id="banner">
+								<h2>Caleb Charpentier</h2>
+							</div>
+						
 						<!-- Header -->
 							<header id="header">
 								<div class="inner">
-
 									<!-- Nav -->
 										<nav id="nav">
 											<ul>
@@ -33,9 +37,9 @@
 												<li><a href="Contact.html">Contact</a></li>
 											</ul>
 										</nav>
+
 								</div>
 							</header>
-
 					</div>
 				</div>
 
