--- a/Contact.html
+++ b/Contact.html
@@ -9,15 +9,18 @@
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header Wrapper -->
+			<!-- Header -->
 				<div id="header-wrapper">
 					<div class="container">
 
+						<!-- Banner -->
+							<div id="banner">
+								<h2>Caleb Charpentier</h2>
+							</div>
+						
 						<!-- Header -->
 							<header id="header">
 								<div class="inner">
-
-
 									<!-- Nav -->
 										<nav id="nav">
 											<ul>
@@ -26,12 +29,12 @@
 												<li><a href="Publications.html">Publications</a></li>
 												<li><a href="Software.html">Software</a></li>
 												<li><a href="pdfs/CV_website.pdf">CV</a></li>
-                        									<li class="current_page_item"><a href="Contact.html">Contact</a></li>
+												<li class="current_page_item"><a href="Contact.html">Contact</a></li>
 											</ul>
 										</nav>
+
 								</div>
 							</header>
-
 					</div>
 				</div>
 
