--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="homepage is-preload" style="margin: 20px;">
+	<body class="homepage is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -39,7 +39,7 @@
 				</div>
 
 			<!-- Main Wrapper -->
-				<div id="main-wrapper">
+				<div id="main-wrapper" style="margin: 20px;">
 					<div class="wrapper style2">
 						<div class="inner">
 							<div class="container">
