--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				</div>
 
 			<!-- Main Wrapper -->
-				<div id="main-wrapper" style="margin: 20px;">
+				<div id="main-wrapper" style="margin-right:40px;margin-left:40px;">
 					<div class="wrapper style2">
 						<div class="inner">
 							<div class="container">
