--- a/Research.html
+++ b/Research.html
@@ -15,7 +15,7 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<div id="header-wrapper">
+				<div id="header-wrapper" style="margin-right:15%;margin-left:15%">
 					<div class="container">
 
 						<!-- Banner -->
@@ -44,7 +44,7 @@
 				</div>
 
 			<!-- Main Wrapper -->
-				<div id="main-wrapper">
+				<div id="main-wrapper" style="margin-right:15%;margin-left:15%">
 					<div class="wrapper style2">
 						<div class="inner">
 							<div class="container">
@@ -103,7 +103,7 @@
 					</div>
 
 								<!-- Footer Wrapper -->
-				<div id="footer-wrapper">
+				<!-- <div id="footer-wrapper">
 					<footer id="footer" class="container">
 						<div class="row">
 							<div class="col-3 col-6-medium col-12-small">
@@ -113,7 +113,7 @@
 							</div>
 						</div>
 					</footer>
-				</div>
+				</div> -->
 		</div>
 
 		<!-- Scripts -->
