--- a/Software.html
+++ b/Software.html
@@ -15,7 +15,7 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<div id="header-wrapper">
+				<div id="header-wrapper" style="margin-right:15%;margin-left:15%">
 					<div class="container">
 
 						<!-- Banner -->
@@ -44,7 +44,7 @@
 				</div>
 
 		<!-- Main Wrapper -->
-				<div id="main-wrapper">
+				<div id="main-wrapper" style="margin-right:15%;margin-left:15%">
 					<div class="wrapper style2">
 						<div class="inner">
 							<div class="container">
@@ -103,7 +103,7 @@
 					</div>
 
 			<!-- Footer Wrapper -->
-				<div id="footer-wrapper">
+				<!-- <div id="footer-wrapper">
 					<footer id="footer" class="container">
 						<div class="row">
 
@@ -111,7 +111,7 @@
 
 						</div>
 					</footer>
-				</div>
+				</div> -->
 
 		</div>
 
