--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<div id="header-wrapper">
+				<div id="header-wrapper" style="margin-right:15%;margin-left:15%">
 					<div class="container">
 
 						<!-- Banner -->
@@ -39,7 +39,7 @@
 				</div>
 
 			<!-- Main Wrapper -->
-				<div id="main-wrapper">
+				<div id="main-wrapper" style="margin-right:15%;margin-left:15%">
 					<div class="wrapper style2">
 						<div class="inner">
 							<div class="container">
@@ -67,14 +67,14 @@
 				</div>
 
 			<!-- Footer Wrapper -->
-				<div id="footer-wrapper">
+				<!-- <div id="footer-wrapper">
 					<footer id="footer" class="container">
 						<div class="row">
 
 
 						</div>
 					</footer>
-				</div>
+				</div> -->
 
 		</div>
 
