--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 									<!-- Content -->
 
 										<article>
-											<header class="major">
-												<h2>No Sidebar</h2>
-												<p>Sidebars are not welcome here</p>
+											<header> <!-- class="major"> -->
+												<h2>Welcome!</h2>
+												<!-- <p>Sidebars are not welcome here</p> -->
 											</header>
 
 											<span class="image featured"><img src="images/pic08.jpg" alt="" /></span>
