--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									<!-- Content -->
 
 										<article>
-											<header> <!-- class="major"> -->
+											<header style="margin:auto;"> <!-- class="major"> -->
 												<h2>Welcome!</h2>
 												<!-- <p>Sidebars are not welcome here</p> -->
 											</header>
