--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 												<!-- <p>Sidebars are not welcome here</p> -->
 											</header>
 
-											<span class="image featured"><img src="images/self.jpg" alt="" /></span>
+											<span><img src="images/self.jpg" alt="" /></span> <!--class="image featured"-->
 
 											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
