--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 												<!-- <p>Sidebars are not welcome here</p> -->
 											</header>
 
-											<span><img style="height:10%;width:auto;" src="images/self.jpg" alt="" /></span> <!--class="image featured"-->
+											<span><img style="height:100px;width:auto;" src="images/self.jpg" alt="" /></span> <!--class="image featured"-->
 
 											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
