--- a/Contact.html
+++ b/Contact.html
@@ -49,11 +49,11 @@
 
 										<article>
 											<p>
-										        Email<br>
-										        Twitter<br>
-											GitHub<br>
-										        Google Scholar<br>
-										        ResearchGate<br>
+										        Email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=calebc22@vt.edu">calebc22@vt.edu</a> <br>
+										        Twitter: <a href="https://twitter.com/CalebCharp">@CalebCharp</a> <br>
+											<a href="https://github.com/calcharp">GitHub</a><br>
+										        <a href="https://scholar.google.com/citations?user=LyaJ880AAAAJ&hl=en">Google Scholar</a> <br>
+										        <!-- ResearchGate<br> -->
 											</p>
 										</article>
 
