--- a/Contact.html
+++ b/Contact.html
@@ -49,10 +49,10 @@
 
 										<article>
 											<p>
-										        Email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=calebc22@vt.edu">calebc22@vt.edu</a> <br>
-										        Twitter: <a href="https://twitter.com/CalebCharp">@CalebCharp</a> <br>
-											<a href="https://scholar.google.com/citations?user=LyaJ880AAAAJ&hl=en">Google Scholar</a> <br>
-											<a href="https://github.com/calcharp">GitHub</a><br>		
+										        Email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=calebc22@vt.edu" target="_blank">calebc22@vt.edu</a> <br>
+										        Twitter: <a href="https://twitter.com/CalebCharp" target="_blank">@CalebCharp</a> <br>
+											<a href="https://scholar.google.com/citations?user=LyaJ880AAAAJ&hl=en" target="_blank">Google Scholar</a> <br>
+											<a href="https://github.com/calcharp" target="_blank">GitHub</a><br>		
 										        <!-- ResearchGate<br> -->
 											</p>
 										</article>
