--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 										<article>
 											<header style="margin:auto;"> <!-- class="major"> -->
-												<h2>Welcome!</h2>
+												<h2 style="margin:auto;">Welcome!</h2>
 												<!-- <p>Sidebars are not welcome here</p> -->
 											</header>
 
