--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 									<!-- Content -->
 
 										<article>
-											<header> <!-- class="major"> -->
-												<h2 style="margin:auto;">Welcome!</h2>
+											<header style="margin-bottom:10px;"> <!-- class="major"> -->
+												<h2>Welcome!</h2>
 												<!-- <p>Sidebars are not welcome here</p> -->
 											</header>
 
