--- a/index.html
+++ b/index.html
@@ -46,23 +46,23 @@
 								<div id="content">
 
 									<!-- Content -->
+									<article>
+									    <header style="margin-bottom:10px;"> <!-- class="major"> -->
+									        <h2>Welcome!</h2>
+									        <!-- <p>Sidebars are not welcome here</p> -->
+									   </header>
 
-										<article>
-											<header style="margin-bottom:10px;"> <!-- class="major"> -->
-												<h2>Welcome!</h2>
-												<!-- <p>Sidebars are not welcome here</p> -->
-											</header>
+									    <span><img style="height:350px;width:auto; float:right; margin-left:10px;" src="images/self.jpg" alt="" /></span> <!--class="image featured"-->
+									
+									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
+									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
+									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
+									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
+									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
+									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
+									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
+									</article>
 
-											<span><img style="height:350px;width:auto;" src="images/self.jpg" alt="" /></span> <!--class="image featured"-->
-
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-											feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-											eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-											mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
-										</article>
 
 								</div>
 							</div>
