--- a/Software.html
+++ b/Software.html
@@ -1,15 +1,15 @@
 <!DOCTYPE HTML>
-<!--
-	ZeroFour by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Caleb Charpentier - Software</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			#header-wrapper {
+				background: transparent !important; /* Ensures the background is transparent, overriding other styles if necessary */
+			}
+		</style>
 	</head>
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
@@ -42,7 +42,6 @@
 							</header>
 					</div>
 				</div>
-
 		<!-- Main Wrapper -->
 				<div id="main-wrapper" style="margin-right:15%;margin-left:15%">
 					<div class="wrapper style2">
