--- a/Contact.html
+++ b/Contact.html
@@ -9,6 +9,9 @@
 			#header-wrapper {
 				background: transparent !important;
 			}
+			#content p {
+				text-align: center;
+			}
 		</style>
 	</head>
 	<body class="no-sidebar is-preload">
