--- a/Research.html
+++ b/Research.html
@@ -57,7 +57,7 @@
 									        <!-- <p>Sidebars are not welcome here</p> -->
 									   </header>
 
-									    <span><img style="height:350px;width:auto; float:right; margin-left:10px;" src="images/self.jpg" alt="" /></span> <!--class="image featured"-->
+									    <span><img style="height:350px;width:auto; float:right; margin-left:10px;" src="images/imageomics.png" alt="" /></span> <!--class="image featured"-->
 									
 									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
