--- a/Research.html
+++ b/Research.html
@@ -57,8 +57,8 @@
 									        <!-- <p>Sidebars are not welcome here</p> -->
 									   </header>
 
-									    <span><img style="height:350px;width:auto; float:right; margin-left:10px;" src="images/imageomics.jpg" alt="" /></span> <!--class="image featured"-->
-									
+									    <span><img style="height:350px;width:auto; float:left; margin-right:10px;" src="images/imageomics.jpg" alt="" /></span> <!--class="image featured"-->
+									    <span><img style="height:350px;width:auto; float:left; margin-right:10px;" src="images/phenoscape.png" alt="" /></span>									
 									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
 									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
