--- a/Research.html
+++ b/Research.html
@@ -53,7 +53,7 @@
 									<!-- Content -->
 									<article>
 									    <header style="margin-bottom:20px;"> <!-- class="major"> -->
-									        <h2>How Can We Understand Difficult-to-Measure Traits?</h2>
+									        <h2>How Can We Identify Complex Phenotypes?</h2>
 									        <!-- <p>Sidebars are not welcome here</p> -->
 									   </header>
 
