--- a/Research.html
+++ b/Research.html
@@ -53,7 +53,7 @@
 									<!-- Content -->
 									<article>
 									    <header style="margin-bottom:20px;"> <!-- class="major"> -->
-									        <h3>How Can We Handle Phenotypic Complexity?</h3>
+									        <h3>How Do We Handle Phenotypic Complexity?</h3>
 									        <!-- <p>Sidebars are not welcome here</p> -->
 									   </header>
 
