--- a/Research.html
+++ b/Research.html
@@ -9,6 +9,16 @@
 			#header-wrapper {
 				background: transparent !important; /* Ensures the background is transparent, overriding other styles if necessary */
 			}
+			.section {
+				clear: both;
+				padding-top: 20px;
+			}
+			.section img {
+				height: auto;
+				width: auto;
+				float: left;
+				margin-right: 10px;
+			}
 		</style>
 	</head>
 	<body class="homepage is-preload">
@@ -57,48 +67,31 @@
 									        <!-- <p>Sidebars are not welcome here</p> -->
 									   </header>
 
-									    <span><img style="height:350px;width:auto; float:left; margin-right:10px;" src="images/imageomics.jpg" alt="" /></span> <!--class="image featured"-->
-									    <span><img style="height:220px;width:auto; float:left; margin-right:10px;" src="images/phylonn.png" alt="" /></span>										
-									    <span><img style="height:250px;width:auto; float:left; margin-right:10px;" src="images/suzanne.jpg" alt="" /></span>
-									    <span><img style="height:280px;width:auto; float:left; margin-right:10px;" src="images/phenoscape.png" alt="" /></span>										
-									    
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>										
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>										
-									</article>
+									   <div class="section">
+										    <h3>Imageomics</h3>
+										    <img src="images/imageomics.jpg" alt="" />
+										    <!-- Add your paragraph content here -->
+									   </div>
 
+									   <div class="section">
+										    <h3>Phylonn</h3>
+										    <img src="images/phylonn.png" alt="" />
+										    <!-- Add your paragraph content here -->
+									   </div>
+
+									   <div class="section">
+										    <h3>Suzanne</h3>
+										    <img src="images/suzanne.jpg" alt="" />
+										    <!-- Add your paragraph content here -->
+									   </div>
+
+									   <div class="section">
+										    <h3>Phenoscape</h3>
+										    <img src="images/phenoscape.png" alt="" />
+										    <!-- Add your paragraph content here -->
+									   </div>
+
+									</article>
 
 								</div>
 							</div>
