--- a/Research.html
+++ b/Research.html
@@ -13,12 +13,6 @@
 				clear: both;
 				padding-top: 20px;
 			}
-			.section img {
-				height: auto;
-				width: auto;
-				float: left;
-				margin-right: 10px;
-			}
 		</style>
 	</head>
 	<body class="homepage is-preload">
@@ -69,25 +63,25 @@
 
 									   <div class="section">
 										    <h3>Imageomics</h3>
-										    <img src="images/imageomics.jpg" alt="" />
+										    <img style="height:350px;width:auto; float:left; margin-right:10px;" src="images/imageomics.jpg" alt="" />
 										    <!-- Add your paragraph content here -->
 									   </div>
 
 									   <div class="section">
 										    <h3>Phylonn</h3>
-										    <img src="images/phylonn.png" alt="" />
+										    <img style="height:220px;width:auto; float:left; margin-right:10px;" src="images/phylonn.png" alt="" />
 										    <!-- Add your paragraph content here -->
 									   </div>
 
 									   <div class="section">
 										    <h3>Suzanne</h3>
-										    <img src="images/suzanne.jpg" alt="" />
+										    <img style="height:250px;width:auto; float:left; margin-right:10px;" src="images/suzanne.jpg" alt="" />
 										    <!-- Add your paragraph content here -->
 									   </div>
 
 									   <div class="section">
 										    <h3>Phenoscape</h3>
-										    <img src="images/phenoscape.png" alt="" />
+										    <img style="height:280px;width:auto; float:left; margin-right:10px;" src="images/phenoscape.png" alt="" />
 										    <!-- Add your paragraph content here -->
 									   </div>
 
