--- a/Research.html
+++ b/Research.html
@@ -10,7 +10,6 @@
 				background: transparent !important; /* Ensures the background is transparent, overriding other styles if necessary */
 			}
 			.section {
-				clear: both;
 				padding-top: 20px;
 			}
 			.clearfix::after {
@@ -53,7 +52,7 @@
 				</div>
 
 			<!-- Main Wrapper -->
-				<div id="main-wrapper" style="margin-right:15%;margin-left:15%" class="clearfix">
+				<div id="main-wrapper" style="margin-right:15%;margin-left:15%">
 					<div class="wrapper style2">
 						<div class="inner">
 							<div class="container">
@@ -66,25 +65,25 @@
 									        <!-- <p>Sidebars are not welcome here</p> -->
 									   </header>
 
-									   <div class="section">
+									   <div class="section clearfix">
 										    <h3>Imageomics</h3>
 										    <img style="height:350px;width:auto; float:left; margin-right:10px;" src="images/imageomics.jpg" alt="" />
 										    <!-- Add your paragraph content here -->
 									   </div>
 
-									   <div class="section">
+									   <div class="section clearfix">
 										    <h3>Phylonn</h3>
 										    <img style="height:220px;width:auto; float:left; margin-right:10px;" src="images/phylonn.png" alt="" />
 										    <!-- Add your paragraph content here -->
 									   </div>
 
-									   <div class="section">
+									   <div class="section clearfix">
 										    <h3>Suzanne</h3>
 										    <img style="height:250px;width:auto; float:left; margin-right:10px;" src="images/suzanne.jpg" alt="" />
 										    <!-- Add your paragraph content here -->
 									   </div>
 
-									   <div class="section">
+									   <div class="section clearfix">
 										    <h3>Phenoscape</h3>
 										    <img style="height:280px;width:auto; float:left; margin-right:10px;" src="images/phenoscape.png" alt="" />
 										    <!-- Add your paragraph content here -->
