--- a/Publications.html
+++ b/Publications.html
@@ -9,6 +9,9 @@
 			#header-wrapper {
 				background: transparent !important; /* Ensures the background is transparent, overriding other styles if necessary */
 			}
+			#footer {
+				background: transparent !important; /* Makes the footer background transparent */
+			}
 		</style>
 	</head>
 	<body class="no-sidebar is-preload">
