--- a/Publications.html
+++ b/Publications.html
@@ -76,7 +76,7 @@
 
 			<!-- Footer Wrapper -->
 				<div id="footer-wrapper">
-					<footer id="footer" class="container">
+					<footer id="footer"> <!-- class="container"> -->
 						<div class="row">
 
 
