--- a/Publications.html
+++ b/Publications.html
@@ -77,7 +77,7 @@
 			<!-- Footer Wrapper -->
 				<div id="footer-wrapper">
 					<footer id="footer"> <!-- class="container"> -->
-						<div class="row">
+						<div> <!--  class="row"> -->
 
 
 						</div>
