--- a/Publications.html
+++ b/Publications.html
@@ -9,7 +9,7 @@
 			#header-wrapper {
 				background: transparent !important; /* Ensures the background is transparent, overriding other styles if necessary */
 			}
-			#footer {
+			#footer-wrapper {
 				background: transparent !important; /* Makes the footer background transparent */
 			}
 		</style>
