--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 		<style>
 			#header-wrapper {
 				background: transparent !important; /* Ensures the background is transparent, overriding other styles if necessary */
-			}
+			};
+			#footer-wrapper {
+				background: transparent !important; /* Ensures the background is transparent, overriding other styles if necessary */
+			}			
 		</style>
 	</head>
 	<body class="homepage is-preload">
