--- a/Software.html
+++ b/Software.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Caleb Charpentier - Software</title>
+		<title>Caleb Charpentier - Software </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -9,9 +9,20 @@
 			#header-wrapper {
 				background: transparent !important; /* Ensures the background is transparent, overriding other styles if necessary */
 			}
+			#footer-wrapper {
+				background: transparent !important; /* Makes the footer background transparent */
+			}
+			.section {
+				padding-top: 20px;
+			}
+			.clearfix::after {
+				content: "";
+				display: table;
+				clear: both;
+			}
 		</style>
 	</head>
-	<body class="no-sidebar is-preload">
+	<body class="homepage is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -42,7 +53,8 @@
 							</header>
 					</div>
 				</div>
-		<!-- Main Wrapper -->
+
+			<!-- Main Wrapper -->
 				<div id="main-wrapper" style="margin-right:15%;margin-left:15%">
 					<div class="wrapper style2">
 						<div class="inner">
@@ -50,68 +62,56 @@
 								<div id="content">
 
 									<!-- Content -->
+									<article>
+									    <header style="margin-bottom:20px;"> <!-- class="major"> -->
+									        <h2>How Do We Handle Phenotypic Complexity?</h2>
+									        <!-- <p>Sidebars are not welcome here</p> -->
+									   </header>
 
-										<article>
-											<header class="major">
-												<h2>No Sidebar</h2>
-												<p>Sidebars are not welcome here</p>
-											</header>
+									   <div class="section clearfix">
+										    <h3>Imageomics</h3>
+										    <img style="height:350px;width:auto; float:left; margin-right:10px;" src="images/imageomics.jpg" alt="" />
+										    <!-- Add your paragraph content here -->
+									   </div>
 
-											<span class="image featured"><img src="images/pic08.jpg" alt="" /></span>
+									   <div class="section clearfix">
+										    <h3>Phylonn</h3>
+										    <img style="height:220px;width:auto; float:left; margin-right:10px;" src="images/phylonn.png" alt="" />
+										    <!-- Add your paragraph content here -->
+									   </div>
 
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-											feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-											eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-											mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
+									   <div class="section clearfix">
+										    <h3>Suzanne</h3>
+										    <img style="height:250px;width:auto; float:left; margin-right:10px;" src="images/suzanne.jpg" alt="" />
+										    <!-- Add your paragraph content here -->
+									   </div>
 
-											<h3>More intriguing information</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus lorem ipsum
-											dolor sit amet phasellus consequat.</p>
+									   <div class="section clearfix">
+										    <h3>Phenoscape</h3>
+										    <img style="height:280px;width:auto; float:left; margin-right:10px;" src="images/phenoscape.png" alt="" />
+										    <!-- Add your paragraph content here -->
+									   </div>
 
-											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-											Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-											fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-											Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-											fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-											Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-											Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus sed feugiat lorem ipsum
-											dolor nullam blandit tempus.</p>
-										</article>
+									</article>
 
 								</div>
 							</div>
 						</div>
 					</div>
+				</div>
 
-			<!-- Footer Wrapper -->
-				<!-- <div id="footer-wrapper">
+								<!-- Footer Wrapper -->
+				<div id="footer-wrapper">
 					<footer id="footer" class="container">
 						<div class="row">
+							<div class="col-3 col-6-medium col-12-small">
 
 
 
+							</div>
 						</div>
 					</footer>
-				</div> -->
-
+				</div>
 		</div>
 
 		<!-- Scripts -->
