--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
 		<style>
 			#header-wrapper {
 				background: transparent !important; /* Ensures the background is transparent, overriding other styles if necessary */
-			};
+			}
 			#footer-wrapper {
-				background: transparent !important; /* Ensures the background is transparent, overriding other styles if necessary */
-			}			
+				background: transparent !important; /* Makes the footer background transparent */
+			}
+			.section {
+				padding-top: 20px;
+			}
+			.clearfix::after {
+				content: "";
+				display: table;
+				clear: both;
+			}
 		</style>
 	</head>
 	<body class="homepage is-preload">
@@ -70,23 +78,23 @@
 									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
 									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
 									
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-											feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-											eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-											mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
-										
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-											feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-											eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-											mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
-									</article>
+									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
+									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
+									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
+									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
+									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
+									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
+									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
 
+									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
+									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
+									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
+									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
+									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
+									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
+									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
+
+									</article>
 
 								</div>
 							</div>
