--- a/Research.html
+++ b/Research.html
@@ -132,7 +132,7 @@
 									   </div>
 
 									   <div class="section clearfix">
-										    <h3>Ontologies for Automated Reasoning</h3>
+										    <h3>Ontologies for Knowledge-Guided Inference</h3>
 										    <img style="height:220px;width:auto; float:left;  margin: 15px 15px 0 0;" src="images/phenoscape.png" alt="" />
 
 									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
