--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         			background-size: cover; /* This will make sure the background image covers the entire viewport */
     			}
     			#banner h2 {
-        			opacity: 1; /* Ensures the text is completely opaque */
+        			opacity: 1 !important; /* Ensures the text is completely opaque */
        				background: none; /* Removes any background that might affect visibility */
     			}
 		</style>
