--- a/Publications.html
+++ b/Publications.html
@@ -12,6 +12,22 @@
 			#footer-wrapper {
 				background: transparent !important; /* Makes the footer background transparent */
 			}
+			.section {
+				padding-top: 20px;
+			}
+			.clearfix::after {
+				content: "";
+				display: table;
+				clear: both;
+			}
+			body {
+        			background: url('images/background-main.jpg') no-repeat center center fixed;
+        			background-size: cover; /* This will make sure the background image covers the entire viewport */
+    			}
+    			#banner h2 {
+        			opacity: 1 !important; /* Ensures the text is completely opaque */
+       				background: none; /* Removes any background that might affect visibility */
+    			}
 		</style>
 	</head>
 	<body class="no-sidebar is-preload">
