--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
 									                    <!-- New Article for Contact -->
                 						        <article style="text-align:center;"> <!-- Centering the content horizontally -->
-                        							<header class="major">
-                            								<h2>Contact</h2>
+                        							<header>
+                            								<h3>Contact Me!</h3>
                         							</header>
                         							<p>If you have any questions or would like to get in touch, 
 										   please feel free to contact me at <a href="mailto:email@example.com">email@example.com</a>.
