--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
                             								<h3>Contact Me!</h3>
                         							</header>
 											<p>
-										        Email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=calebc22@vt.edu" target="_blank">calebc22@vt.edu</a> &emsp;
-										        Twitter: <a href="https://twitter.com/CalebCharp" target="_blank">@CalebCharp</a> &emsp;
-											<a href="https://scholar.google.com/citations?user=LyaJ880AAAAJ&hl=en" target="_blank">Google Scholar</a> &emsp;
-											<a href="https://github.com/calcharp" target="_blank">GitHub</a><br>		
+										        <a style="text-decoration:none" href="https://mail.google.com/mail/?view=cm&fs=1&to=calebc22@vt.edu" target="_blank">calebc22@vt.edu</a> &emsp;&emsp;
+										        <a style="text-decoration:none" href="https://twitter.com/CalebCharp" target="_blank">Twitter</a> &emsp;&emsp;
+											<a style="text-decoration:none" href="https://scholar.google.com/citations?user=LyaJ880AAAAJ&hl=en" target="_blank">Google Scholar</a> &emsp;&emsp;
+											<a style="text-decoration:none" href="https://github.com/calcharp" target="_blank">GitHub</a><br>		
 										        <!-- ResearchGate<br> -->
 											</p>
                     							</article>
