--- a/Software.html
+++ b/Software.html
@@ -71,35 +71,22 @@
 
 									<!-- Content -->
 									<article>
-									    <header style="margin-bottom:20px;"> <!-- class="major"> -->
-									        <h2>How Do We Handle Phenotypic Complexity?</h2>
-									        <!-- <p>Sidebars are not welcome here</p> -->
-									   </header>
-
+															   
 									   <div class="section clearfix">
-										    <h3>Imageomics</h3>
-										    <img style="height:350px;width:auto; float:left; margin-right:10px;" src="images/imageomics.jpg" alt="" />
-										    <!-- Add your paragraph content here -->
+										    <h3>RPhenoscate</h3>
+									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.</p>
 									   </div>
 
 									   <div class="section clearfix">
-										    <h3>Phylonn</h3>
-										    <img style="height:220px;width:auto; float:left; margin-right:10px;" src="images/phylonn.png" alt="" />
-										    <!-- Add your paragraph content here -->
+										    <h3>Revticulate</h3>
+									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.</p>
 									   </div>
 
 									   <div class="section clearfix">
-										    <h3>Suzanne</h3>
-										    <img style="height:250px;width:auto; float:left; margin-right:10px;" src="images/suzanne.jpg" alt="" />
-										    <!-- Add your paragraph content here -->
+										    <h3>SISRS</h3>
+								            <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.</p>
 									   </div>
-
-									   <div class="section clearfix">
-										    <h3>Phenoscape</h3>
-										    <img style="height:280px;width:auto; float:left; margin-right:10px;" src="images/phenoscape.png" alt="" />
-										    <!-- Add your paragraph content here -->
-									   </div>
-
+										   
 									</article>
 
 								</div>
