--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         			opacity: 1 !important; /* Ensures the text is completely opaque */
        				background: none; /* Removes any background that might affect visibility */
     			}
+			.inner nav#nav {
+        			text-align: center; /* Centering the content horizontally */
+    			}
+    			.inner nav#nav ul {
+    				display: inline-block; /* Making the ul element inline */
+    			}
 		</style>
 	</head>
 	<body class="homepage is-preload">
