--- a/Software.html
+++ b/Software.html
@@ -73,17 +73,19 @@
 															   
 									   <div class="section clearfix">
 										    <h3>RPhenoscate</h3>
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.</p>
+									    <p>An R package for semantic-aware evolutionary analyses of anatomical traits    |    <a href="https://github.com/uyedaj/rphenoscate">Link</a>
+									    </p>
 									   </div>
 
 									   <div class="section clearfix">
 										    <h3>Revticulate</h3>
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.</p>
+									    <p>An R interface for interaction with RevBayes    |    <a href="https://github.com/revbayes/Revticulate">Link</a></p>
 									   </div>
 
 									   <div class="section clearfix">
 										    <h3>SISRS</h3>
-								            <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.</p>
+								            <p>A Python-based pipeline for identifying phylogenetically informative sites from 
+										 next-generation whole-genome sequencing of multiple species    |    <a href="https://github.com/SchwartzLabURI/SISRS">Link</a></p>
 									   </div>
 										   
 									</article>
