--- a/Software.html
+++ b/Software.html
@@ -79,7 +79,7 @@
 
 									   <div class="section clearfix">
 										    <h3>Revticulate</h3>
-									    <p>An R interface for interaction with RevBayes    |    <a style="text-decoration:none" href="https://github.com/revbayes/Revticulate">Link</a></p>
+									    <p>An R language interface for interaction with RevBayes    |    <a style="text-decoration:none" href="https://github.com/revbayes/Revticulate">Link</a></p>
 									   </div>
 
 									   <div class="section clearfix">
