--- a/Software.html
+++ b/Software.html
@@ -73,13 +73,13 @@
 															   
 									   <div class="section clearfix">
 										    <h3>RPhenoscate</h3>
-									    <p>An R package for semantic-aware evolutionary analyses of anatomical traits    |    <a style="text-decoration:none" target="_blank" href="https://github.com/uyedaj/rphenoscate">Link</a>
+									    <p>An R package for semantic-aware evolutionary analyses of anatomical traits    |    <a style="text-decoration:none" target="_blank" href="https://github.com/uyedaj/rphenoscate">Link</a>    |    <a style="text-decoration:none" target="_blank" href="https://doi.org/10.1101/2023.02.19.528613">Publication</a>
 									    </p>
 									   </div>
 
 									   <div class="section clearfix">
 										    <h3>Revticulate</h3>
-									    <p>An R language interface for interaction with RevBayes    |    <a style="text-decoration:none" target="_blank" href="https://github.com/revbayes/Revticulate">Link</a></p>
+									    <p>An R language interface for interaction with RevBayes    |    <a style="text-decoration:none" target="_blank" href="https://github.com/revbayes/Revticulate">Link</a></p>    |    <a style="text-decoration:none" target="_blank" href="https://doi.org/10.1111/2041-210X.13852">Publication</a>
 									   </div>
 
 									   <div class="section clearfix">
