--- a/Software.html
+++ b/Software.html
@@ -79,7 +79,7 @@
 
 									   <div class="section clearfix">
 										    <h3>Revticulate</h3>
-									    <p>An R language interface for interaction with RevBayes    |    <a style="text-decoration:none" target="_blank" href="https://github.com/revbayes/Revticulate">Link</a></p>    |    <a style="text-decoration:none" target="_blank" href="https://doi.org/10.1111/2041-210X.13852">Publication</a>
+									    <p>An R language interface for interaction with RevBayes    |    <a style="text-decoration:none" target="_blank" href="https://github.com/revbayes/Revticulate">Link</a>    |    <a style="text-decoration:none" target="_blank" href="https://doi.org/10.1111/2041-210X.13852">Publication</a></p>
 									   </div>
 
 									   <div class="section clearfix">
