--- a/index.html
+++ b/index.html
@@ -112,14 +112,16 @@
 									                    <!-- New Article for Contact -->
                 						        <article style="text-align:center;"> <!-- Centering the content horizontally -->
                         							<header>
-                            								<h3>Contact Me!</h3>
+                            								<h3>Where to Find Me</h3>
                         							</header>
 											<p>
 										        <a style="text-decoration:none" href="https://mail.google.com/mail/?view=cm&fs=1&to=calebc22@vt.edu" target="_blank">calebc22@vt.edu</a> &emsp;&emsp;
 										        <a style="text-decoration:none" href="https://twitter.com/CalebCharp" target="_blank">Twitter</a> &emsp;&emsp;
 											<a style="text-decoration:none" href="https://scholar.google.com/citations?user=LyaJ880AAAAJ&hl=en" target="_blank">Google Scholar</a> &emsp;&emsp;
 											<a style="text-decoration:none" href="https://github.com/calcharp" target="_blank">GitHub</a><br>		
-										        <!-- ResearchGate<br> -->
+											<a style="text-decoration:none" href="https://www.etsy.com/shop/geeksanonymousco" target="_blank">Etsy</a>
+											<a style="text-decoration:none" href="www.wyzant.com/Tutors/CalebTheTutor" target="_blank">Wyzant</a><br>												
+												<!-- ResearchGate<br> -->
 											</p>
                     							</article>
 
