--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 									                    <!-- New Article for Contact -->
                 						        <article style="text-align:center;"> <!-- Centering the content horizontally -->
                         							<header>
-                            								<h3>Where to Find Me</h3>
+                            								<h3>Find Me Online</h3>
                         							</header>
 											<p>
 										        <a style="text-decoration:none" href="https://mail.google.com/mail/?view=cm&fs=1&to=calebc22@vt.edu" target="_blank">calebc22@vt.edu</a> &emsp;&emsp;
