--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
        				background: none; /* Removes any background that might affect visibility */
     			}
 			.inner nav#nav {
-        			text-align: center; /* Centering the content horizontally */
+        			text-align: center !important; /* Centering the content horizontally */
     			}
     			.inner nav#nav ul {
-    				display: inline-block; /* Making the ul element inline */
+    				display: inline-block !important; /* Making the ul element inline */
     			}
 		</style>
 	</head>
