--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
         			text-align: center !important; /* Centering the content horizontally */
     			}
     			.inner nav#nav ul {
-    				display: inline-block !important; /* Making the ul element inline */
-    			}
+    			    	margin-left: auto;
+			    	margin-right: auto;
+   			        width: fit-content; /* Adjusts the width to fit the content */
+ 			}
 		</style>
 	</head>
 	<body class="homepage is-preload">
