--- a/Research.html
+++ b/Research.html
@@ -129,7 +129,7 @@
 
 									   <div class="section clearfix">
 										    <h3>Simulating Raw Data</h3>
-										    <img style="height:auto;width:50%; float:left;  margin: 15px 15px 0 0;" src="images/suzanne.jpg" alt="" />
+										    <img style="height:auto;width:50%; float:left;  margin: 15px 15px 0 0;" src="images/snailsim.jpeg" alt="" />
 
 								            <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
