--- a/index.html
+++ b/index.html
@@ -85,21 +85,11 @@
 
 									    <span><img style="height:auto; width:40%; float:right; margin-left:5%;" src="images/self.jpg" alt="" /></span> <!--class="image featured"-->
 									
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
+									    <p>I'm a Ph.D. student with Uyeda Lab at Virginia Tech, and my research
+									    interests involve understanding how we can use modern machine learning 
+									    techniques to better construct and understand biological traits. </p>
 									
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
+									    <p>My current dissertation interests involve devising ways </p>
 
 									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
